
  - Additional significant internal cleanups in the Configure() subsystem
    and its tests.

  - Have the Qt Builder make uic-generated files dependent on the .ui.h
    file, if one exists.

  - Add a test to make sure that SCons source code does not contain
    try:-except: blocks that catch all errors, which potentially catch
    and mask keyboard interrupts.

  From Russell Yanofsky:

  - Add support for the Metrowerks Codewarrior compiler and linker
    (mwcc and mwld).



RELEASE 0.96.1 - XXX

  From Craig Bachelor:

  - Handle white space in the executable Python path name within in MSVS
    project files by quoting the path.

  - Correct the format of a GUID string in a solution (.dsw) file so
    MSVS can correctly "build enable" a project.

  From Steven Knight:

  - Add a must_exist flag to Delete() to let the user control whether
    it's an error if the specified entry doesn't exist.  The default
    behavior is now to silently do nothing if it doesn't exist.

  - Package up the new Platform/darwin.py, mistakenly left out of 0.96.

  - Make the scons.bat REM statements into @REM so they aren't printed.

  - Make the SCons packaging SConscript files platform independent.

  From Anthony Roach:

  - Fix scanning of pre-compiled header (.pch) files for #includes,
    broken in 0.96.



RELEASE 0.96 - Wed, 18 Aug 2004 13:36:40 +0000

  From Chad Austin:

  - Make the CacheDir() directory if it doesn't already exist.

  - Allow construction variable substitutions in $LIBS specifications.

  - Allow the emitter argument to a Builder() to be or expand to a list
    of emitter functions, which will be called in sequence.

  - Suppress null values in construction variables like $LIBS that use
    the internal _concat() function.

  - Remove .dll files from the construction variables searched for
    libraries that can be fed to Win32 compilers.

  From Chad Austin and Christoph Wiedemann:

  - Add support for a $RPATH variable to supply a list of directories